# opentds

./: .gitignore  README.md  WIKI_SCHEMA.md  main copy.py  main.py  pyproject.toml
.github/workflows/: ci.yml
.obsidian/: workspace.json
.wiki/: config.json
.wiki/templates/: analysis.md  concept.md  entity.md  source.md  synthesis.md
core/: collision.py  constants.py  generator.py  geometry.py  ipsc_rules.py  models.py  scoring.py  shapes.py  texture_generator.py
examples/: generate_examples.py  stage_long.json  stage_medium.json  stage_short.json  stage_short_barriers.json  stage_short_fault.json
meta/: backlinks.json  events.jsonl  index.md  lint-report.md  log.md  registry.json
services/: exporter.py  openscad_exporter.py  serializer.py
tests/: conftest.py  test_generator.py  test_ipsc_rules.py  test_models.py  test_new_validators.py  test_scoring.py  test_serializer.py  test_shapes.py  test_shooting_positions.py
ui/: main_window.py
ui/dialogs/: __init__.py  target_config_dialog.py
ui/editor/: generator_panel.py  property_dock.py  stage_info.py  stage_scene.py  stage_view.py  target_images.py
ui/viewer3d/: StageScene.qml  quick_3d_widget.py
ui/workers/: generator_worker.py
wiki/analyses/: 2026-07-09-analisi-conformita-opentds-al-regolamento-ipsc-handgun-2024.md
wiki/concepts/: ipsc-divisions.md  ipsc-penalties.md  ipsc-range-commands.md  ipsc-safety-rules.md  ipsc-scoring.md  ipsc-stage-design.md  ipsc-targets.md
wiki/entities/: fitds.md  ipsc.md  iroa.md
wiki/sources/: SRC-2026-07-09-001.md
wiki/syntheses/: opentds-ipsc-compliance.md
(+2 files in other folders)
