[project]
name = "opentds"
version = "0.1.0"
description = "Open Tactical Dynamic Stage Generator for IPSC practical shooting"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
opentds = "main:main"

[tool.setuptools.packages.find]
include = ["core*", "services*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
